--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,16 @@
 
 /* Your CSS Code here. */
+#holder{
+	display:flex;
+    flex-wrap:wrap;
+	justify-content: space-between;
+
+}
+.item{
+	color:blue;
+	background-color:green;
+	padding:10px;
+	text-align:center;
+	border:1px solid black;
+	
+}
